# ai-guardian

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GITHUB-PUSH.md  IMPLEMENTATION-STATUS.md  LICENSE  MCP-INSTALL.md  NEXT_STEPS.md  PROJECT-BRIEF.md  PROJECT-STRUCTURE.md  PROJECT_STRUCTURE.md  README-WINDOWS-DRIVER.md  README.md  clawbot-guardian-prompt.txt  clawbot-guardian-rule.md  demo.ts  mcp-config.json  package-lock.json  package.json  test-autoclaw-targets.ps1  test_final.html  test_output.html  test_page.html  test_page2.html  test_page3.html  test_page4.html  test_page5.html
.github/workflows/: ci.yml
config/: default.yaml
docs/: ARCHITECTURE_V2.md  EDR-STUDY.md  FEATURES_v2.md  GUI-INSTALLATION.md  OPENCLAW_DEFENSE_ANALYSIS.md  USER_MANUAL.md  WIKI.md  autoclaw-integration.md
driver/linux/: Makefile  ai_guardian.bpf.c
driver/windows/: build.bat  install-driver.ps1  uninstall-driver.ps1
driver/windows/AiGuardianDriver/: AiGuardianDriver.c  AiGuardianDriver.inf
examples/: cli.rs
extensions/openclaw/: README.md
extensions/openclaw/ai-guardian/: index.ts  openclaw.plugin.json  package-lock.json  package.json
installer/windows/: setup.nsi
integrations/: README.md
integrations/openclaw/: ai-guardian-plugin.ts
integrations/terminal/: install-simple.ps1  install.ps1
powershell/: AI-Guardian-Monitor.psm1
research/: terminal-marking-analysis.md
scripts/: build-windows.bat  install-driver.ps1
skills/autoclaw/: README.md
skills/autoclaw/ai-guardian-skill/: index.ts  skill.json
src/: cli.ts  index.ts  lib.rs  main.rs
src/analysis/: mcp-injection-detector.ts  obfuscation-detector.ts  openclaw-analyzer.ts  prompt-injection-detector.ts  risk-analyzer.ts  skill-supply-chain.ts
src/audit/: body-camera.ts
src/config/: llm-config.ts
src/core/: agent-detector.ts  ai_analyzer.rs  audit_logger.rs  config.rs  emergency-stop.ts  environment-context.ts  guardian.ts  mod.rs  risk_engine.rs  terminal-monitor.ts  terminal-output-monitor.ts  types.ts
src/decision/: decision-engine.ts
src/driver/: mod.rs
src/driver/linux/: mod.rs
src/driver/windows/: etw_monitor.rs  lib.rs  mod.rs  wfp_monitor.rs
src/i18n/: index.ts
src/llm/providers/: anthropic.ts  base.ts  deepseek.ts  gemini.ts  index.ts  mimoflash.ts  ollama.ts  openai.ts  qwen.ts
src/mcp/: mcp-proxy.ts  mcp-server.ts
src/monitor/: mod.rs
src/monitor/linux/: mod.rs
src/monitor/windows/: etw.rs  mod.rs
src/platform/: notification-manager.ts  startup-manager.ts
src/simulation/: command-parser.ts  mental-simulation.ts
src/web/: api-server.ts  api.rs  handlers.rs  mod.rs  routes.rs  server.ts  state.rs  types.rs
tests/: command-parser.test.ts  linux_tests.rs  risk-analyzer.test.ts  security_tests.rs  windows_tests.rs
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/main/: main.ts  preload.ts  tsconfig.json
ui/src/renderer/: App.tsx  index.css  index.html  main.tsx  tsconfig.json
ui/src/renderer/layout/: Shell.tsx  SideNav.tsx  TitleBar.tsx
ui/src/renderer/pages/: AuditLogs.tsx  Dashboard.tsx  HealthCheck.tsx  Home.tsx  Logs.tsx  Monitoring.tsx  RealTimeProtection.tsx  Settings.tsx  Toolbox.tsx  (+1 more)
(+3 files in other folders)
