[package]
name = "ai-guardian"
version = "2.0.0"
edition = "2021"
authors = ["AI Guardian Team"]
description = "AI Guardian V2 - System-Level EDR for AI Agents"
license = "MIT"
repository = "https://github.com/HaohanHe/ai-guardian"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"

# Cryptography
sha2 = "0.10"

# Lazy initialization
lazy_static = "1.4"

# Async runtime
futures = "0.3"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Networking_WinSock",
] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["process", "user"] }
# libbpf 依赖暂时禁用，需要手动安装 libelf-dev
# libbpf-rs = { version = "0.22", optional = true }
# libbpf-sys = { version = "1.3", optional = true }

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "ai-guardian"
path = "src/main.rs"

[lib]
name = "ai_guardian"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
